modified index html

--- a/public-html/index.html
+++ b/public-html/index.html
@@ -19,7 +19,7 @@
 		<img src="_images/logo.png" alt="Logo" width="165" height="120">
 		<nav>
 			<ul>
-				<li><a href="">Why Us</a></li>
+				<li><a href="">Home</a></li>
 				<li><a href="">Courses List</a></li>
 				<li><a href="">Testimonials</a></li>
 				<li><a href="">Contact</a></li>
